--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style></style>
 
 </head>
-<body class="bg-black text-white flex flex-col">
+<body class="overflow-x-hidden overflow-y-hidden bg-black text-white flex flex-col">
 
     <div class="fixed h-10 border border-white top-0 w-11/12 rounded-md self-center m-4
     flex flex-col justify-center items-center max-w-[36rem]">
