--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="overflow-x-hidden overflow-y-hidden bg-black text-white flex flex-col">
 
-    <div class="fixed h-10 border border-white top-0 w-11/12 rounded-md self-center m-4
+    <div class="bg-black fixed h-10 border border-white top-0 w-11/12 rounded-md self-center m-4
     flex flex-col justify-center items-center max-w-[36rem]">
         <h1 class="text-2xl font-thin"><i>Attendance Calculator</i></h1>
         
