--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="overflow-x-hidden overflow-y-scroll bg-black text-white flex flex-col">
 
     <div class="bg-black fixed h-10 border border-white top-0 w-11/12 rounded-md self-center m-4
-    flex flex-row justify-around items-center max-w-[36rem] overflow-x-hidden">
+    flex flex-row justify-around items-center max-w-[36rem] overflow-x-hidden z-50">
         <h1 class="text-2xl font-thin "><i>Attendance Calculator</i></h1>
         <!-- <h1 class="text-3xl font-extralight"><i>VD</i></h1> -->
     </div>
@@ -24,7 +24,7 @@
     <div class=" mt-24 flex flex-col items-center  h-screen justify-start ">
         
         <div class="flex flex-row py-8">
-            <h1 class="text-9xl font-[10]" id="v"><i>V</i></h1>
+            <h1 class="text-9xl font-[10] z-40" id="v"><i>V</i></h1>
             <h1 class="text-9xl font-[10] " id="d"><i>D</i></h1>
         </div>
         <div class=" text-lg font-thin text-center px-5 mb-8 text-gray-400 max-w-105">
