--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="google-adsense-account" content="ca-pub-7592016089439901">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <meta name="google-site-verification" content="oq-oX1VXS4EoALZSfi5FwcaCA0-I9dYMzwe4zJPMIWQ" />
 
     
     
