--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <meta name="google-site-verification" content="oq-oX1VXS4EoALZSfi5FwcaCA0-I9dYMzwe4zJPMIWQ" />
 
-    
+       <meta name="description" content="A neat Attendance Calculator that lets you calculate how many lectures you need to attend to get to 75% attendance, 
+           and if you are already above 75% it will show you how many lectures you can bunk but still remain above the detention percentage.
+           ">
     
     <style>
 
